Fix "compare float" on mobile

--- a/app/assets/stylesheets/elements/_compare.scss
+++ b/app/assets/stylesheets/elements/_compare.scss
@@ -1,26 +1,41 @@
 .compare-float {
-  display: flex;
-  align-items: center;
   position: fixed;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   width: auto;
-  padding: 0 0 0 .75em;
+  padding: 0 2.5em 0 .75em;
   border: 1px solid $border-color;
   border-bottom: 0;
   background: $bg-color;
   font-size: 14px;
   box-shadow: 0 -2px 10px rgba($black, .1);
 
+  span {
+    display: block;
+    padding: .5em 0;
+
+    @media (min-width: 640px) {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   strong {
-    margin: 0 1em 0 .5em;
     color: $white;
+
+    @media (min-width: 640px) {
+      margin: 0 0 0 .5em;
+    }
   }
 }
 
 .compare-float__close {
-  display: block;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
   background: $red;
   color: $white;
   height: 100%;
